# mcp-api-bridge-lite

./: .gitignore  README.md  pyproject.toml
mcp_api_bridge_lite/: __init__.py  server.py
