[project]
name = "mcp-api-bridge-lite"
version = "1.0.0"
description = "Free REST API to MCP bridge. Let your AI agent call any API in 30 seconds. Part of the MCP Starter Arsenal."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TiranTech"}]
readme = "README.md"
keywords = ["mcp", "api", "rest", "ai-agent", "claude", "llm", "model-context-protocol", "bridge"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/tiranmoskovitch-dev/mcp-api-bridge-lite"
"Full Version" = "https://whop.com/checkout/plan_bys1zVJEPhQji"
"MCP Starter Arsenal" = "https://whop.com/checkout/plan_rdUWYjU5aDoA0"

[project.scripts]
mcp-api-lite = "mcp_api_bridge_lite.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
